Fix that emoji-image-preview placeholders are sometimes visible

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 ul {
